--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,15 @@
 .App {
-  padding-left: 5%;
-  padding-top: 100px;
-  /* text-align: center; */
+  text-align: center;
 }
 
-/* .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-} */
+.App-main {
+  /* background-color: #636363; */
+  padding-left: 25%;
+  padding-right: 25%;
+  padding-top: 5%;
+  text-align: left;
+}
+
 
 /* .App-header {
   background-color: #282c34;
