font color, refactoring

--- a/src/App.css
+++ b/src/App.css
@@ -9,4 +9,7 @@
   padding-top: 5%;
   text-align: left;
   padding-bottom: 5%;
+  /* font-family: "Segoe UI", Candara, "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif; */
+  /* color: grey */
+  color: #666666
 }
