--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,30 @@
   text-align: left;
   padding-bottom: 5%;
   /* font-family: "Segoe UI", Candara, "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif; */
-  /* color: grey */
   color: #666666
+}
+
+ul {
+  padding-left: 20px;
+}
+
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen 
+and (min-device-width : 320px) 
+and (max-device-width : 480px) {
+.App-main {
+  padding-left: 10%;
+  padding-right: 10%;
+}
+}
+
+/* iPads (portrait and landscape) ----------- */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) {
+.App-main {
+  padding-left: 10%;
+  padding-right: 10%;
+}
 }
